--- a/index.html
+++ b/index.html
@@ -23,16 +23,26 @@
     <!-- Code CSS -->
     <link rel="stylesheet" href="scss/style.css" />
     <!-- End CSS -->
+
+    <!-- Code JS -->
+     <script src="js/script.js" defer></script>
+     <!-- End JS -->
     <title>Higienização e Lavanderia</title>
   </head>
   <body>
     <header>
+      <div class="btnHamburguer">
+        <i class="fa-solid fa-bars"></i>
+      </div>
       <div class="container">
         <div class="ajustHeader">
           <div class="logo">
             <img src="img/higienização-estofados-logo.svg" alt="">
           </div>
           <div class="menuNav">
+            <div class="logoMobil">
+              <img src="img/higienização-estofados-logo.svg" alt="">
+            </div>
             <ul>
               <li><a href="#">Sobre</a></li>
               <li><a href="#">Serviços</a></li>
@@ -43,5 +53,10 @@
         </div>
       </div>
     </header>
+
+
+
+
+
   </body>
 </html>
