--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               <li><a href="#">Cliente</a></li>
               <li><a href="#">Contato</a></li>
             </ul>
+            <span class="copy">&copy;Ns Clean 2024</span>
           </div>
         </div>
       </div>
