--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <header>
       <div class="btnHamburguer">
         <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-circle-xmark"></i>
       </div>
       <div class="container">
         <div class="ajustHeader">
