--- a/index.html
+++ b/index.html
@@ -31,30 +31,51 @@
   </head>
   <body>
     <header>
-      <div class="btnHamburguer">
-        <i class="fa-solid fa-bars"></i>
-        <i class="fa-solid fa-circle-xmark"></i>
-      </div>
-      <div class="container">
-        <div class="ajustHeader">
-          <div class="logo">
-            <img src="img/higienização-estofados-logo.svg" alt="">
-          </div>
-          <div class="menuNav">
-            <div class="logoMobil">
+      <div class="headerFixed">
+        <div class="btnHamburguer">
+          <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-circle-xmark"></i>
+        </div>
+        <div class="container">
+          <div class="ajustHeader">
+            <div class="logo">
               <img src="img/higienização-estofados-logo.svg" alt="">
             </div>
-            <ul>
-              <li><a href="#">Sobre</a></li>
-              <li><a href="#">Serviços</a></li>
-              <li><a href="#">Cliente</a></li>
-              <li><a href="#">Contato</a></li>
-            </ul>
-            <span class="copy">&copy;Ns Clean 2024</span>
+            <nav class="menuNav">
+              <div class="logoMobil">
+                <img src="img/higienização-estofados-logo.svg" alt="">
+              </div>
+              <ul>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Cliente</a></li>
+                <li><a href="#">Contato</a></li>
+              </ul>
+              <span class="copy">&copy;Ns Clean 2024</span>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <div class="headerInfo">
+        <div class="container">
+          <div class="header">
+            <div class="col1">
+             <div class="titleHeader">--</div>
+             <div class="subtitleHeader">--</div>
+             <div class="contactHeader">
+               <div class="contact">--</div>
+               <div class="videoheader">--</div>
+            </div>
+            </div>
+            <div class="col2">
+              <div class="imgHeader">--</div>
+            </div>
           </div>
         </div>
       </div>
     </header>
+
+    
 
 
 
