--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- End CSS -->
 
     <!-- Code JS -->
-     <script src="js/script.js" defer></script>
-     <!-- End JS -->
+    <script src="js/script.js" defer></script>
+    <!-- End JS -->
     <title>Higienização e Lavanderia</title>
   </head>
   <body>
@@ -39,11 +39,11 @@
         <div class="container">
           <div class="ajustHeader">
             <div class="logo">
-              <img src="img/higienização-estofados-logo.svg" alt="">
+              <img src="img/higienização-estofados-logo.svg" alt="" />
             </div>
             <nav class="menuNav">
               <div class="logoMobil">
-                <img src="img/higienização-estofados-logo.svg" alt="">
+                <img src="img/higienização-estofados-logo.svg" alt="" />
               </div>
               <ul>
                 <li><a href="#">Sobre</a></li>
@@ -60,12 +60,19 @@
         <div class="container">
           <div class="header">
             <div class="col1">
-             <div class="titleHeader">--</div>
-             <div class="subtitleHeader">--</div>
-             <div class="contactHeader">
-               <div class="contact">--</div>
-               <div class="videoheader">--</div>
-            </div>
+              <div class="titleHeader"><strong>Higienização</strong> e <strong>Lavanderia</strong></div>
+              <div class="subtitleHeader">Liderando com Qualidade e Eficiência em <strong>Higienização</strong> e <strong>Lavanderia</strong></div>
+              <div class="contactHeader">
+                <div class="contact"><button>Contato</button></div>
+                <div class="videoheader">
+                  <div class="modal-video">
+                    <span class="btnVideo"><i class="fa-regular fa-circle-play"></i> Play</span>
+                    <div class="video" style="display: none;">
+                      <iframe width="80%" height="80%" src="https://www.youtube.com/embed/v-R7X9ps7RU?si=_m89CzAb5bapVFIX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col2">
               <div class="imgHeader">--</div>
@@ -74,12 +81,5 @@
         </div>
       </div>
     </header>
-
-    
-
-
-
-
-
   </body>
 </html>
