--- a/index.html
+++ b/index.html
@@ -60,22 +60,42 @@
         <div class="container">
           <div class="header">
             <div class="col1">
-              <div class="titleHeader"><strong>Higienização</strong> e <strong>Lavanderia</strong></div>
-              <div class="subtitleHeader">Liderando com Qualidade e Eficiência em <strong>Higienização</strong> e <strong>Lavanderia</strong></div>
+              <div class="titleHeader">
+                <strong>Higienização</strong> e <strong>Lavanderia</strong>
+              </div>
+              <div class="subtitleHeader">
+                Liderando com Qualidade e Eficiência em
+                <strong>Higienização</strong> e <strong>Lavanderia</strong>
+              </div>
               <div class="contactHeader">
                 <div class="contact"><button>Contato</button></div>
                 <div class="videoheader">
                   <div class="modal-video">
-                    <span class="btnVideo"><i class="fa-regular fa-circle-play"></i> Play</span>
-                    <div class="video" style="display: none;">
-                      <iframe width="80%" height="80%" src="https://www.youtube.com/embed/v-R7X9ps7RU?si=_m89CzAb5bapVFIX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <span class="btnVideo"
+                      ><i class="fa-regular fa-circle-play"></i>
+                       Play
+                    </span>
+                    <div class="video">
+                      <i class="fa-solid fa-circle-xmark" id="closeVideo"></i>
+                      <iframe
+                        width="80%"
+                        height="80%"
+                        src="https://www.youtube.com/embed/v-R7X9ps7RU?si=_m89CzAb5bapVFIX"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen
+                      ></iframe>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col2">
-              <div class="imgHeader">--</div>
+              <div class="imgHeader">
+                <img src="img/undraw_logistics_x-4-dc.svg" alt="">
+              </div>
             </div>
           </div>
         </div>
