--- a/index.html
+++ b/index.html
@@ -75,19 +75,6 @@
                       ><i class="fa-regular fa-circle-play"></i>
                        Play
                     </span>
-                    <div class="video">
-                      <i class="fa-solid fa-circle-xmark" id="closeVideo"></i>
-                      <iframe
-                        width="80%"
-                        height="80%"
-                        src="https://www.youtube.com/embed/v-R7X9ps7RU?si=_m89CzAb5bapVFIX"
-                        title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin"
-                        allowfullscreen
-                      ></iframe>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -115,8 +102,21 @@
           </div>
         </div>
       </div>
+      <div class="video">
+        <i class="fa-solid fa-circle-xmark" id="closeVideo"></i>
+        <iframe
+          width="80%" 
+          height="80%"
+          src="https://www.youtube.com/embed/v-R7X9ps7RU?si=_m89CzAb5bapVFIX"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
     </header>
-    <section>
+    <main>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti mollitia sit eligendi recusandae sint laudantium ut molestias vel iste amet. Quis excepturi nam id aspernatur inventore officia odio eaque neque!
       Autem, eveniet ipsum atque dicta dolor ipsa quo ipsam at amet accusamus quisquam maiores nisi cum sunt reiciendis corporis magni maxime ratione numquam neque eaque sit cupiditate earum perferendis! Illo!
       Voluptate harum fugiat deserunt totam magni, necessitatibus inventore sit, laboriosam cupiditate enim nihil numquam tempore laudantium aut culpa ducimus reiciendis voluptates maxime deleniti. Aspernatur culpa placeat numquam tenetur amet molestiae!
@@ -137,6 +137,6 @@
       Enim necessitatibus porro corporis ducimus quas veritatis aliquam quibusdam error magnam fugiat ut aut repellat laboriosam eos beatae saepe repudiandae sequi obcaecati, inventore architecto facilis! Saepe corrupti asperiores repellat cupiditate!
       Laboriosam, cumque? Molestiae recusandae dignissimos doloribus vel voluptates aliquid aut sequi, rem enim explicabo? Blanditiis, nulla error? Nobis voluptatibus optio asperiores, labore ratione cupiditate esse officia corporis rem in quis.
       Beatae laborum nemo distinctio ullam id labore quae quidem suscipit molestiae exercitationem! Magni, doloribus inventore? Odit nihil aperiam, qui quas tempora assumenda eaque beatae ducimus, molestiae illum porro, cum modi!
-    </section>
+    </main>
   </body>
 </html>
