--- a/index.html
+++ b/index.html
@@ -87,17 +87,20 @@
           </div>
           <div class="cardsHeaderContainer">
             <div class="card-item">
-              <div><img src="img/lavagem-de-dinheiro.png" alt=""></div>
+              <div><img src="img/lavanderia2.png" alt=""></div>
               <div><h3><strong>Lavanderia</strong></h3></div>
             </div>
             <div class="card-item">
-              2
+              <div><img src="img/lavanderia2.png" alt=""></div>
+              <div><h3><strong>Roupas Sujas</strong></h3></div>
             </div>
             <div class="card-item">
-              3
+              <div><img src="img/lavanderia2.png" alt=""></div>
+              <div><h3><strong>Roupas Sujas</strong></h3></div>
             </div>
             <div class="card-item">
-              4
+              <div><img src="img/lavanderia2.png" alt=""></div>
+              <div><h3><strong>Roupas Sujas</strong></h3></div>
             </div>
           </div>
         </div>
