--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
           </div>
           <div class="cardsHeaderContainer">
             <div class="card-item">
-              <div><img src="img/lavanderia2.png" alt=""></div>
-              <div><h3><strong>Lavanderia</strong></h3></div>
+              <div><img src="img/higienização-de-sofa07.svg" alt=""></div>
+              <div><h3><strong>Higienização</strong></h3></div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavanderia2.png" alt=""></div>
-              <div><h3><strong>Roupas Sujas</strong></h3></div>
+              <div><img src="img/scooter-1027350_640 1.svg" alt=""></div>
+              <div><h3><strong>Leva e trás</strong></h3></div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavanderia2.png" alt=""></div>
-              <div><h3><strong>Roupas Sujas</strong></h3></div>
+              <div><img src="img/lavandeira.svg" alt=""></div>
+              <div><h3><strong>Lavanderia </strong></h3></div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavanderia2.png" alt=""></div>
+              <div><img src="" alt=""></div>
               <div><h3><strong>Roupas Sujas</strong></h3></div>
             </div>
           </div>
@@ -120,26 +120,27 @@
       </div>
     </header>
     <main>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti mollitia sit eligendi recusandae sint laudantium ut molestias vel iste amet. Quis excepturi nam id aspernatur inventore officia odio eaque neque!
-      Autem, eveniet ipsum atque dicta dolor ipsa quo ipsam at amet accusamus quisquam maiores nisi cum sunt reiciendis corporis magni maxime ratione numquam neque eaque sit cupiditate earum perferendis! Illo!
-      Voluptate harum fugiat deserunt totam magni, necessitatibus inventore sit, laboriosam cupiditate enim nihil numquam tempore laudantium aut culpa ducimus reiciendis voluptates maxime deleniti. Aspernatur culpa placeat numquam tenetur amet molestiae!
-      Aliquid, laboriosam harum soluta ab quas magni, tempora minus iure aperiam suscipit natus ducimus incidunt qui, voluptas expedita. Veritatis quas delectus dicta temporibus accusamus. Nam quidem optio incidunt quibusdam ipsa.
-      Alias reiciendis iste exercitationem blanditiis natus maxime soluta quas magnam debitis, voluptatum expedita officiis explicabo aut est quod excepturi esse sapiente dolorem libero sequi perspiciatis rem ab? Nostrum, nam possimus!
-      Ipsa temporibus, accusantium eos necessitatibus corporis cum ut expedita illum recusandae unde quisquam fugit assumenda cumque cupiditate? Molestias laboriosam alias rerum praesentium perferendis voluptate fugiat laudantium, blanditiis error deserunt beatae!
-      Minus voluptatum ex laborum iusto quia, fugit dolorem quam quos rem eligendi molestiae! At ullam, distinctio cupiditate inventore est ad ipsam. Quod perspiciatis eos fuga, nobis porro enim corporis iusto.
-      Reprehenderit, fugit sequi? Veniam asperiores tempore voluptatibus, exercitationem at molestias esse iusto necessitatibus optio, libero molestiae illum? Quia ipsam architecto temporibus aperiam vel unde? Sint repellat labore accusantium reiciendis odit?
-      Eaque eos blanditiis, nisi hic facere tempora fugit modi animi, nostrum in sint dolore, quia atque assumenda id iusto praesentium officia pariatur nobis sunt. Quo ad maiores veniam iure quaerat?
-      Possimus minus veritatis adipisci nisi sed distinctio necessitatibus quaerat, doloremque accusantium placeat, exercitationem nihil enim. Mollitia, asperiores, nostrum saepe explicabo sequi placeat repellat voluptatum, reiciendis et magni adipisci vero illum.
-      Veritatis quisquam tempore ipsum velit quia ipsam libero error eligendi perferendis corporis molestias dicta ducimus dolor doloribus enim quaerat qui nesciunt similique incidunt illo modi, tenetur facilis. Dolorum, ipsa quae.
-      Vitae consequatur architecto rem, voluptas eos accusamus enim obcaecati impedit facere blanditiis voluptate omnis optio numquam ad distinctio magni maxime hic modi? Repellat, totam magni. Rem animi facilis eum obcaecati.
-      Beatae laudantium fugiat saepe libero, ipsum eaque veniam deleniti! Beatae obcaecati eaque consectetur eum officia inventore ratione tempora consequuntur quibusdam dolor recusandae, fugit reiciendis veritatis voluptatibus ab nostrum reprehenderit adipisci.
-      Quae nostrum ea veritatis? Soluta excepturi, accusamus tempore perspiciatis deleniti numquam, reiciendis voluptates doloremque quis voluptatum, praesentium rem quod illum corporis culpa molestiae nesciunt porro unde. Inventore autem animi dicta.
-      Nostrum, incidunt eius? Animi molestiae quia reiciendis provident? Iure unde animi voluptas asperiores culpa, dolorem neque incidunt provident eum ipsa commodi eos cupiditate, officiis voluptates tempore earum dolorum magni molestiae!
-      Incidunt vel libero molestias ut voluptatibus, magni hic cum dolores quis non eveniet, totam eum assumenda aliquam ab amet aspernatur adipisci. Autem sequi ducimus a. Amet natus sit vitae sunt!
-      Consequatur, velit laudantium voluptatibus nobis corporis distinctio laboriosam, ut quo, repellat fugiat non ea eaque. Qui ea alias, modi eaque fuga nam animi rerum iure aliquam unde id odio quidem!
-      Enim necessitatibus porro corporis ducimus quas veritatis aliquam quibusdam error magnam fugiat ut aut repellat laboriosam eos beatae saepe repudiandae sequi obcaecati, inventore architecto facilis! Saepe corrupti asperiores repellat cupiditate!
-      Laboriosam, cumque? Molestiae recusandae dignissimos doloribus vel voluptates aliquid aut sequi, rem enim explicabo? Blanditiis, nulla error? Nobis voluptatibus optio asperiores, labore ratione cupiditate esse officia corporis rem in quis.
-      Beatae laborum nemo distinctio ullam id labore quae quidem suscipit molestiae exercitationem! Magni, doloribus inventore? Odit nihil aperiam, qui quas tempora assumenda eaque beatae ducimus, molestiae illum porro, cum modi!
+      <div class="container">
+        <section class="about">
+          <div class="titleSection">
+            <h3>Sobre</h3>
+          </div>
+          <div class="colsConatinerSectionOn">
+            <div class="colSection-on">
+              <div class="titleLocation"><p><strong>NS CLEAN:</strong> Excelência em <strong>Higienização</strong> e <strong>Lavanderia</strong> para sua Tranquilidade</p></div>
+              <div class="frameLocation">
+                ---
+              </div>
+              <div class="textLocation">
+                <p>Localizado em Nova Serrana, um centro dinâmico conhecido por sua indústria calçadista, o serviço de higienização e lavanderia oferece soluções essenciais para manter a qualidade e a durabilidade dos tecidos, atendendo tanto clientes residenciais quanto empresariais. Com um compromisso com a excelência, a empresa se dedica a oferecer serviços que garantem limpeza impecável, utilizando tecnologias modernas e produtos de alta qualidade, sempre respeitando o meio ambiente</p>
+              </div>
+            </div>
+            <div class="colSection-two">
+              ---
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
