--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
       <div class="video">
         <i class="fa-solid fa-circle-xmark" id="closeVideo"></i>
-        <iframe
+        <!-- <iframe
           width="80%" 
           height="80%"
           src="https://www.youtube.com/embed/v-R7X9ps7RU?si=_m89CzAb5bapVFIX"
@@ -116,7 +116,10 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
-        ></iframe>
+        ></iframe> -->
+        <video width="90%" height="90%" controls>
+          <source src="img/higienização-de-estofados.mp4" type="video/mp4">
+        </video>
       </div>
     </header>
     <main>
