--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
           referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
         ></iframe> -->
-        <video width="90%" height="80%" controls>
+        <video width="90%" height="80%" controls title="Higienização e Lavanderia NS Clean"; autoplay>
           <source src="img/higienização-de-estofados.mp4" type="video/mp4">
         </video>
+        <!-- <video src="img/higienização-de-estofados.mp4" autoplay controls>
+
+        </video> -->
       </div>
     </header>
     <main>
