--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="colSection-on">
               <div class="titleLocation">
                 <p>
-                  <strong>NS CLEAN:</strong> Excelência em
+                  <strong>Ns Clean:</strong> Excelência em
                   <strong>Higienização</strong> e
                   <strong>Lavanderia</strong> para sua Tranquilidade
                 </p>
