--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="img/higienização-estofados-logo.svg" alt="" />
               </div>
               <ul>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#about">Sobre</a></li>
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Cliente</a></li>
                 <li><a href="#">Contato</a></li>
@@ -123,7 +123,7 @@
     </header>
     <main>
       <div class="container">
-        <section class="about">
+        <section class="about" id="about">
           <div class="titleSection">
             <h3>Sobre</h3>
           </div>
@@ -201,7 +201,23 @@
                 </p>
               </div>
             </div>
-            <div class="colSection-two">---</div>
+            <div class="colSection-two">
+              <div class="title-two">
+                <h3>Soluções Completa de <strong>Higienização</strong> e <strong>Lavanderia</strong> para um Ambiente Impecável</h3>
+              </div>
+              <div class="listService">
+                <ul>
+                  <li><i class="fa-regular fa-circle-check"></i><strong>Higienização</strong> de <strong>Estofados</strong> e <strong>Carpetes</strong></li>
+                  <li><i class="fa-regular fa-circle-check"></i>Lavagem e <strong>Passadoria de Roupas</strong></li>
+                  <li><i class="fa-regular fa-circle-check"></i><strong>Limpeza de Veículos</strong></li>
+                  <li><i class="fa-regular fa-circle-check"></i>Serviço de <strong>Lavagem a Seco</strong></li>
+                </ul>
+              </div>
+              <div class="history">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/D302eEkYVrY?si=7rVa6Y3lbITW4t7i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+              <div class="contact"><button class="btnHistory">Entre em contato</button></div>
+            </div>
           </div>
         </section>
       </div>
