--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="headerInfo">
-        <div class="container">
+        <div class="container overflow">
           <div class="header">
             <div class="col1">
               <div class="titleHeader">
