--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Code JS -->
     <script src="js/script.js" defer></script>
     <!-- End JS -->
-    <title>Higienização e Lavanderia</title>
+    <title>Lavanderia e Higienização de estofados - Higienização de sofá - Higienização de carpete</title>
   </head>
   <body>
     <header>
@@ -47,8 +47,8 @@
               </div>
               <ul>
                 <li><a href="#about">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Cliente</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#">Cliente</a></li>  
                 <li><a href="#">Contato</a></li>
               </ul>
               <span class="copy">&copy;Ns Clean 2024</span>
@@ -61,7 +61,7 @@
           <div class="header">
             <div class="col1">
               <div class="titleHeader">
-                <strong>Higienização</strong> e <strong>Lavanderia</strong>
+                <h1><strong>Lavanderia</strong> e <br> <strong>Higienização de Estofados</strong></h1>
               </div>
               <div class="subtitleHeader">
                 Liderando com Qualidade e Eficiência em
@@ -87,25 +87,25 @@
           </div>
           <div class="cardsHeaderContainer">
             <div class="card-item">
-              <div><img src="img/armchair-2095981_640 1.svg" alt="" /></div>
+              <div><img src="img/higienização-de-estofados-nova-serrana.svg" alt="" /></div>
               <div>
                 <h3><strong>Higienização</strong></h3>
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/caminhao-de-entrega (1) 1.svg" alt="" /></div>
+              <div><img src="img/lavanderia-entrega.svg" alt="" /></div>
               <div>
                 <h3><strong>Leva e trás</strong></h3>
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavandeira.svg" alt="" /></div>
+              <div><img src="img/lavanderia-roupas.svg" alt="" /></div>
               <div>
                 <h3><strong>Lavanderia </strong></h3>
               </div>
             </div>
             <div class="card-item">
-              <div><img src="img/lavagem-de-roupas.svg" alt="" /></div>
+              <div><img src="img/roupa-limpa.svg" alt="" /></div>
               <div>
                 <h3><strong>Roupas Limpas</strong></h3>
               </div>
@@ -219,6 +219,9 @@
               <div class="contact"><button class="btnHistory">Entre em contato</button></div>
             </div>
           </div>
+        </section>
+        <section class="services" id="services">
+         
         </section>
       </div>
     </main>
