--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
               </div>
             </div>
             <div class="col2">
-              <div class="imgHeader">--</div>
+              <div class="imgHeader">
+                <img src="img/undraw_group_selfie_re_h8gb.svg" alt="">
+              </div>
             </div>
           </div>
         </div>
