--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
             <div class="col2">
               <div class="imgHeader">
-                <img src="img/undraw_group_selfie_re_h8gb.svg" alt="">
-                <img src="img/undraw_logistics_x-4-dc.svg" alt="" />
+                <img src="img/undraw_group_selfie_re_h8gb.svg" alt="" />
+                <!-- <img src="img/undraw_logistics_x-4-dc.svg" alt="" /> -->
               </div>
             </div>
           </div>
