--- a/index.html
+++ b/index.html
@@ -222,7 +222,131 @@
           </div>
         </section>
         <section class="services" id="services">
-         
+          <div class="titleSection">
+            <h3>Serviços</h3>
+          </div>
+          <div class="service--cards">
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+            <div class="card--item">
+              <div class="card--img">
+                <img src="img/estofados-de-carro.png" alt="">
+              </div>
+              <div class="card--title">
+                <h4>Revitalize Seu Carro</h4>
+              </div>
+              <div class="card--text">
+                <p>Higienização Completa para Seu Carro</p>
+              </div>
+              <div class="card--button">
+                <button>Orçamento</button>
+                <span><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
