--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
           <div class="titleSection">
             <h3>Serviços</h3>
           </div>
+          <div class="subtitle--service">
+            <h2>Solicite Nosso Serviço de <strong>Lavanderia</strong> e <strong>Higienização</strong> e Experimente a Diferença!</h2>
+          </div>
           <div class="service--cards">
             <div class="card--item">
               <div class="card--img">
@@ -234,7 +237,7 @@
                 <h4>Revitalize Seu Carro</h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p><strong>Higienização</strong> Completa para Seu Carro</p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
@@ -243,13 +246,13 @@
             </div>
             <div class="card--item">
               <div class="card--img">
-                <img src="img/estofados-de-carro.png" alt="">
+                <img src="img/higienizacao-sofa.png" alt="">
               </div>
               <div class="card--title">
-                <h4>Revitalize Seu Carro</h4>
+                <h4><strong>Higienização de Sofás</strong> Profunda e Eficaz</h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p>Restaure o Conforto e a Beleza do Seu <strong>Sofá</strong></p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
@@ -258,13 +261,13 @@
             </div>
             <div class="card--item">
               <div class="card--img">
-                <img src="img/estofados-de-carro.png" alt="">
+                <img src="img/higienizacao-tapete.png" alt="">
               </div>
               <div class="card--title">
-                <h4>Revitalize Seu Carro</h4>
+                <h4><strong>Higienização de Tapetes</strong> com Precisão</h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p>Elimine Sujeira e Ácaros, Devolva a Vida ao Seu <strong>Tapete</strong></p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
@@ -273,13 +276,13 @@
             </div>
             <div class="card--item">
               <div class="card--img">
-                <img src="img/estofados-de-carro.png" alt="">
+                <img src="img/lavagem-de-roupa.png" alt="">
               </div>
               <div class="card--title">
-                <h4>Revitalize Seu Carro</h4>
+                <h4><strong>Lavanderia</strong> Profissional para Suas Roupas</h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p>Limpeza Impecável e Frescor Duradouro</p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
@@ -288,13 +291,13 @@
             </div>
             <div class="card--item">
               <div class="card--img">
-                <img src="img/estofados-de-carro.png" alt="">
+                <img src="img/higienizacao-de-cadeiras.png" alt="">
               </div>
               <div class="card--title">
-                <h4>Revitalize Seu Carro</h4>
+                <h4><strong>Higienização</strong> Completa de Cadeiras</h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p>Conforto e Limpeza em Cada Detalhe: Cuide Bem do Seu Espaço</p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
@@ -303,13 +306,13 @@
             </div>
             <div class="card--item">
               <div class="card--img">
-                <img src="img/estofados-de-carro.png" alt="">
+                <img src="img/higienizacao-de-carpetes.png" alt="">
               </div>
               <div class="card--title">
-                <h4>Revitalize Seu Carro</h4>
+                <h4>"<strong>Higienização</strong> Especializada de Carpetes</h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p>Remova Manchas e Impurezas: Deixe Seu Ambiente Mais Saudável e Confortável</p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
@@ -318,13 +321,13 @@
             </div>
             <div class="card--item">
               <div class="card--img">
-                <img src="img/estofados-de-carro.png" alt="">
+                <img src="img/higienizacao-de-cama.png" alt="">
               </div>
               <div class="card--title">
-                <h4>Revitalize Seu Carro</h4>
+                <h4><strong>Higienização</strong> Profunda de Camas</h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p>Remova Ácaros e Impurezas: Garantia de Conforto e Saúde em Seu Sono</p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
@@ -333,13 +336,13 @@
             </div>
             <div class="card--item">
               <div class="card--img">
-                <img src="img/estofados-de-carro.png" alt="">
+                <img src="img/lavagem_de_roupa.jpg" alt="">
               </div>
               <div class="card--title">
-                <h4>Revitalize Seu Carro</h4>
+                <h4>Serviços Completos de <strong>Lavanderia</strong></h4>
               </div>
               <div class="card--text">
-                <p>Higienização Completa para Seu Carro</p>
+                <p>Cuidado Especializado para Todas as Suas Peças: Limpeza, Lavagem e Conforto Garantidos</p>
               </div>
               <div class="card--button">
                 <button>Orçamento</button>
